--- a/vorlage.html
+++ b/vorlage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Vorlage: FH5</title>
+        <title>Vorlage: Forza Horizon 5</title>
         <link rel="stylesheet" href="styles.css">
         <meta charset="UTF-8">
     </head>
