--- a/vorlage.html
+++ b/vorlage.html
@@ -13,7 +13,9 @@
                         <a href="index.html">Home</a>
                         <a href="cars.html">Cars</a>
                         <a href="map.html">Map</a>
-                        <img src="./images/Logo.png" alt="Logo" class="Logo">
+                        <a href="index.html" class="Logo">
+                            <img alt="Logo" class="Logo" src="./images/Logo.png">
+                        </a>                        
                         <a href="tuning.html">Tuning</a>
                         <a href="tuning.html">Tips</a>
                         <a href="aboutme.html">About</a>
