--- a/vorlage.html
+++ b/vorlage.html
@@ -8,8 +8,8 @@
     <body>
         <header>
             <div class="colorramp"></div>
-            <div class="header-navigation">
-                    <nav>
+                <div class="header-navigation">
+                    <nav class="wrap">
                         <a href="index.html">Home</a>
                         <a href="cars.html">Cars</a>
                         <a href="map.html">Map</a>
