--- a/vorlage.html
+++ b/vorlage.html
@@ -28,7 +28,7 @@
             <div class="wrap">
                 <div class="floatleft" style="width: 60%;">
                     <div>
-                        <span class="h1">Forza&nbsp;</span> <span class="h1" style="font-family: LogoFont;">Horizon 5</span>
+                        <h1>Forza Horizon 5</h1>
                     </div>
                     <p>Your Ultimate Horizon Adventure awaits!
                         Explore the vibrant and ever-evolving open
