--- a/vorlage.html
+++ b/vorlage.html
@@ -24,27 +24,14 @@
             <div class="colorramp"></div>
         </header>
         <article>
-
-            <div class="wrap">
-                <div class="floatleft" style="width: 60%;">
-                    <div>
-                        <h1>Forza Horizon 5</h1>
-                    </div>
-                    <p>Your Ultimate Horizon Adventure awaits!
-                        Explore the vibrant and ever-evolving open
-                        world landscapes of Mexico with limitless,
-                        fun driving action in hundreds of the
-                        world’s greatest cars. Begin Your Horizon
-                        Adventure today and add to your Wishlist!</p>
-                </div>
-                <div class="floatright" style="width: 40%;">
-                    <img class="center cover" src="./images/cover.jpg" alt="Game Cover">
-                </div>
-            </div>
-            <div>
-                <p class="buy"><a href="https://store.steampowered.com/app/1551360/Forza_Horizon_5/">buy now on steam!</a></p>
-            </div>
-            <div class="paragraph-trenner"></div>
+            <P>Paragraph</P>
+            <a>Link</a>
+            <h1>H1 Text</h1>
+            <h2>H2 Text</h2>
+            <h3>H3 Text</h3>
+            <h4>H4 Text</h4>
+            <h5>H5 Text</h5>
+            <h5>H6 Text</h6>
         </article>
         <footer>
             <div class="colorramp"></div>
