--- a/vorlage.html
+++ b/vorlage.html
@@ -13,7 +13,7 @@
                         <a href="index.html">Home</a>
                         <a href="cars.html">Cars</a>
                         <a href="map.html">Map</a>
-                        <a href="index.html" class="Logo">
+                        <a href="index.html" class="Logo wrap">
                             <img alt="Logo" class="Logo" src="./images/Logo.png">
                         </a>                        
                         <a href="tuning.html">Tuning</a>
