--- a/index.html
+++ b/index.html
@@ -10,15 +10,24 @@
             <div class="colorramp"></div>
                 <div class="header-navigation">
                     <nav class="wrap">
-                        <a href="index.html">Home</a>
-                        <a href="cars.html">Cars</a>
+                        <a href="index.html" class="LogoClick" target="_blank">
+                            <img src="./images/Logo2.png" class="Logo" alt="Start">
+                        </a>
+                        <a href="index.html">News</a>
+                        <div class="dropdown">
+                            <a class="dropbtn">Cars</a>
+                            <div class="dropdown-content">
+                              <a href="#">Road Racing</a>
+                              <a href="#">Dirt Racing</a>
+                              <a href="#">Cross Rounty Racing</a>
+                              <a href="#">PR Stunts</a>
+                              <a>Street Racing</a>
+                            </div>
+                          </div>
                         <a href="map.html">Map</a>
-                        <a href="index.html" class="Logo">
-                            <img alt="Logo" class="Logo" src="./images/Logo.png">
-                        </a>                        
                         <a href="tuning.html">Tuning</a>
-                        <a href="tuning.html">Tips</a>
-                        <a href="aboutme.html">About</a>
+                        <a href="tips.html">Tips</a>
+                        <a href="aboutme.html">About-Me</a>
                     </nav>
                 </div>
             <div class="colorramp"></div>
@@ -42,7 +51,7 @@
                 </div>
             </div>
             <div>
-                <p class="buy"><a href="https://store.steampowered.com/app/1551360/Forza_Horizon_5/">buy now on steam!</a></p>
+                <iframe src="https://store.steampowered.com/widget/1551360/547831/" frameborder="0" width="646" height="190"></iframe>
             </div>
             <div class="paragraph-trenner"></div>
         </article>
