--- a/vorlage.html
+++ b/vorlage.html
@@ -10,15 +10,24 @@
             <div class="colorramp"></div>
                 <div class="header-navigation">
                     <nav class="wrap">
-                        <a href="index.html">Home</a>
-                        <a href="cars.html">Cars</a>
+                        <a href="index.html" class="LogoClick" target="_blank">
+                            <img src="./images/Logo2.png" class="Logo" alt="Start">
+                        </a>
+                        <a href="index.html">News</a>
+                        <div class="dropdown">
+                            <a class="dropbtn">Cars</a>
+                            <div class="dropdown-content">
+                                <a href="#">Road Racing</a>
+                                <a href="#">Dirt Racing</a>
+                                <a href="#">Cross Rounty Racing</a>
+                                <a href="#">PR Stunts</a>
+                                <a href="#">Street Racing</a>
+                            </div>
+                          </div>
                         <a href="map.html">Map</a>
-                        <a href="index.html" class="Logo wrap">
-                            <img alt="Logo" class="Logo" src="./images/Logo.png">
-                        </a>                        
                         <a href="tuning.html">Tuning</a>
-                        <a href="tuning.html">Tips</a>
-                        <a href="aboutme.html">About</a>
+                        <a href="tips.html">Tips</a>
+                        <a href="aboutme.html">About-Me</a>
                     </nav>
                 </div>
             <div class="colorramp"></div>
@@ -35,7 +44,34 @@
         </article>
         <footer>
             <div class="colorramp"></div>
-            <p>footer text</p>
+            <div class="footercontent">
+                <div>
+                    <h3>Contact me</h3>
+                    <ul>
+                        <li><a href="joel_erni1@sluz.ch">send E-Mail</a></li>
+                        <li><a>on Discord</a></li>
+                        <li>Tel.: 079 123 45 67</li>
+                    </ul>
+                </div>
+                <div>
+                    <h3>Social Media</h3>
+                    <ul>
+                        <li><a>Youtube</a></li>
+                        <li><a>Instagram</a></li>
+                        <li><a>Discord</a></li>
+                        <li><a>Reddit</a></li>
+                        <li><a>LinkedIn</a></li>
+                    </ul>
+                </div>
+                <div>
+                    <h3>About</h3>
+                    <ul>
+                        <li><a href="aboutme.html">About me</a></li>
+                        <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">AGB</a></li>
+                        <li><a href="https://c.tenor.com/rUa8MTSuXFEAAAAd/who-cares.gif" target="_blank">Disclaimer</a></li>
+                    </ul>
+                </div>
+            </div>
         </footer>
     </body>
 </html>
