--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
                 </div>
             <div class="colorramp"></div>
         </header>
-        <article>
+        <article class="wrap">
 
-            <div class="wrap">
+            <div class="wrap content">
                 <div class="floatleft" style="width: 60%;">
                     <div>
                         <h1>Forza Horizon 5</h1>
@@ -51,13 +51,78 @@
                 </div>
             </div>
             <div>
-                <iframe src="https://store.steampowered.com/widget/1551360/547831/" frameborder="0" width="646" height="190"></iframe>
+                <iframe src="https://store.steampowered.com/widget/1551360/547831/" frameborder="0" width="800" height="190"></iframe>
             </div>
             <div class="paragraph-trenner"></div>
+            <div class="wrap">
+                <div>
+                    <div style="width: 50%;" class="floatleft">
+                        <h2 class="awards-list">The Game Award for <br><span style="font-family: AmsiBoldItalic;">Best Audio Design</span><br>2021</h2>
+                    </div>
+                    <div style="width: 50%;" class="floatleft">
+                        <h2 class="awards-list">The Game Award for <br><span style="font-family: AmsiBoldItalic;">Innovation in Accessibility</span><br>2021</h2>
+                    </div>
+                </div>
+                <div>
+                    <div style="width: 50%;" class="floatleft">
+                        <h2 class="awards-list">The Game Award for Best <br><span style="font-family: AmsiBoldItalic;">Sports/Racing Game</span><br>2021</h2>
+                    </div>
+                    <div style="width: 50%;" class="floatleft">
+                        <h2 class="awards-list">NME Award for <br><span style="font-family: AmsiBoldItalic;">Best Audio in Game</span><br>2022</h2>
+                    </div>
+                </div>
+            </div>
+            <div class="paragraph-trenner"></div>
+            <div>
+                <div class="content center">
+                    <h3>Lead breathtaking expeditions across the vibrant and ever-evolving open world landscapes of Mexico with limitless, fun driving action in hundreds of the world’s greatest cars.</h3>
+                </div>
+                <div class="container wrap">
+                    <div style="width: 33.33%; float: left;">
+                        <img src="./images/map4k.jpg" width="300" class="center borderradius">
+                        <h2 class="center">Map</h2>
+                    </div>
+                    <div style="width: 33.33%; float: left;">
+                        <img src="./images/tuning.jpg" width="300" class="center borderradius">
+                        <h2 class="center">Tuning</h2>
+                    </div>
+                    <div style="width: 33.33%; float: left;">
+                        <img src="./images/supra.jpg" width="300" class="center borderradius">
+                        <h2 class="center">Cars</h2>
+                    </div>
+                </div>
+            </div>
         </article>
         <footer>
             <div class="colorramp"></div>
-            <p>footer text</p>
+            <div class="footercontent">
+                <div>
+                    <h3>Contact me</h3>
+                    <ul>
+                        <li><a href="joel_erni1@sluz.ch">send E-Mail</a></li>
+                        <li><a>on Discord</a></li>
+                        <li>Tel.: 079 123 45 67</li>
+                    </ul>
+                </div>
+                <div>
+                    <h3>Social Media</h3>
+                    <ul>
+                        <li><a>Youtube</a></li>
+                        <li><a>Instagram</a></li>
+                        <li><a>Discord</a></li>
+                        <li><a>Reddit</a></li>
+                        <li><a>LinkedIn</a></li>
+                    </ul>
+                </div>
+                <div>
+                    <h3>About</h3>
+                    <ul>
+                        <li><a href="aboutme.html">About me</a></li>
+                        <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">AGB</a></li>
+                        <li><a href="https://c.tenor.com/rUa8MTSuXFEAAAAd/who-cares.gif" target="_blank">Disclaimer</a></li>
+                    </ul>
+                </div>
+            </div>
         </footer>
     </body>
 </html>
