--- a/vorlage.html
+++ b/vorlage.html
@@ -9,7 +9,7 @@
         <header>
             <div class="colorramp"></div>
                 <div class="header-navigation">
-                    <nav class="wrap">
+                    <nav>
                         <a href="index.html" class="LogoClick" target="_blank">
                             <img src="./images/Logo2.png" class="Logo" alt="Start">
                         </a>
