--- a/vorlage.html
+++ b/vorlage.html
@@ -4,6 +4,7 @@
         <title>Vorlage: Forza Horizon 5</title>
         <link rel="stylesheet" href="styles.css">
         <meta charset="UTF-8">
+        <link rel="shortcut icon" type="image/png" href="./images/icon.jpg">
     </head>
     <body>
         <header>
