--- a/vorlage.html
+++ b/vorlage.html
@@ -4,8 +4,10 @@
         <title>Vorlage: Forza Horizon 5</title>
         <link rel="stylesheet" href="styles.css">
         <meta charset="UTF-8">
-        <link rel="shortcut icon" type="image/png" href="./images/icon.jpg">
-    </head>
+        <link rel="shortcut icon" type="image/png" href="./images/icon.png">
+    </head style="    background-image:
+    linear-gradient(to bottom, rgba(245, 246, 252, 0) 0%, rgb(59, 53, 46) 55vw), url('images/Background1.jpg');
+">
     <body>
         <header>
             <div class="colorramp"></div>
@@ -14,7 +16,7 @@
                         <a href="index.html" class="LogoClick" target="_blank">
                             <img src="./images/Logo2.png" class="Logo" alt="Start">
                         </a>
-                        <a href="index.html">News</a>
+                        <a href="news.html">News</a>
                         <div class="dropdown">
                             <a class="dropbtn">Cars</a>
                             <div class="dropdown-content">
