--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
         <title>Vorlage: Forza Horizon 5</title>
         <link rel="stylesheet" href="styles.css">
         <meta charset="UTF-8">
-        <link rel="shortcut icon" type="image/png" href="./images/icon.jpg">
+        <link rel="shortcut icon" type="image/png" href="./images/icon.png">
     </head>
-    <body>
+    <body style="    background-image:
+    linear-gradient(to bottom, rgba(245, 246, 252, 0) 0%, rgb(59, 53, 46) 55vw), url('images/Background1.jpg');
+">
         <header>
             <div class="colorramp"></div>
                 <div class="header-navigation">
@@ -14,7 +16,7 @@
                         <a href="index.html" class="LogoClick" target="_blank">
                             <img src="./images/Logo2.png" class="Logo" alt="Start">
                         </a>
-                        <a href="index.html">News</a>
+                        <a href="news.html">News</a>
                         <div class="dropdown">
                             <a class="dropbtn">Cars</a>
                             <div class="dropdown-content">
@@ -40,7 +42,7 @@
                     <div>
                         <h1>Forza Horizon 5</h1>
                     </div>
-                    <p>Your Ultimate Horizon Adventure awaits!
+                    <p style="padding-right: 10%;">Your Ultimate Horizon Adventure awaits!
                         Explore the vibrant and ever-evolving open
                         world landscapes of Mexico with limitless,
                         fun driving action in hundreds of the
@@ -48,7 +50,7 @@
                         Adventure today and add to your Wishlist!</p>
                 </div>
                 <div class="floatright" style="width: 40%;">
-                    <img class="center cover" src="./images/cover.jpg" alt="Game Cover">
+                    <img style="width: 90%; text-align: center; max-height: 500px; max-width: 500px; border-radius: 5px;" src="./images/cover.jpg" alt="Game Cover">
                 </div>
             </div>
             <div>
