--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
         </header>
         <article class="wrap">
 
-            <div class="wrap content">
-                <div class="floatleft" style="width: 60%;">
+            <div class="wrap flex-container">
+                <div class="flex-item2">
                     <div>
                         <h1>Forza Horizon 5</h1>
                     </div>
@@ -49,7 +49,7 @@
                         world’s greatest cars. Begin Your Horizon
                         Adventure today and add to your Wishlist!</p>
                 </div>
-                <div class="floatright" style="width: 40%;">
+                <div class="flex-item1">
                     <img style="width: 90%; text-align: center; max-height: 500px; max-width: 500px; border-radius: 5px;" src="./images/cover.jpg" alt="Game Cover">
                 </div>
             </div>
@@ -57,20 +57,20 @@
                 <iframe src="https://store.steampowered.com/widget/1551360/547831/" frameborder="0" width="800" height="190"></iframe>
             </div>
             <div class="paragraph-trenner"></div>
-            <div class="wrap">
-                <div>
-                    <div style="width: 50%;" class="floatleft">
+            <div>
+                <div class="flex-container">
+                    <div class="flex-item1">
                         <h2 class="awards-list">The Game Award for <br><span style="font-family: AmsiBoldItalic;">Best Audio Design</span><br>2021</h2>
                     </div>
-                    <div style="width: 50%;" class="floatleft">
+                    <div class="flex-item1">
                         <h2 class="awards-list">The Game Award for <br><span style="font-family: AmsiBoldItalic;">Innovation in Accessibility</span><br>2021</h2>
                     </div>
                 </div>
-                <div>
-                    <div style="width: 50%;" class="floatleft">
+                <div class="flex-container">
+                    <div class="flex-item1">
                         <h2 class="awards-list">The Game Award for Best <br><span style="font-family: AmsiBoldItalic;">Sports/Racing Game</span><br>2021</h2>
                     </div>
-                    <div style="width: 50%;" class="floatleft">
+                    <div class="flex-item1">
                         <h2 class="awards-list">NME Award for <br><span style="font-family: AmsiBoldItalic;">Best Audio in Game</span><br>2022</h2>
                     </div>
                 </div>
@@ -80,17 +80,17 @@
                 <div class="content center">
                     <h3>Lead breathtaking expeditions across the vibrant and ever-evolving open world landscapes of Mexico with limitless, fun driving action in hundreds of the world’s greatest cars.</h3>
                 </div>
-                <div class="container wrap">
-                    <div style="width: 33.33%; float: left;">
-                        <img src="./images/map4k.jpg" width="300" class="center borderradius">
+                <div class="flex-container">
+                    <div class="flex-item1">
+                        <img src="./images/map4k.jpg" style="width: 70%;" class="center borderradius">
                         <h2 class="center">Map</h2>
                     </div>
-                    <div style="width: 33.33%; float: left;">
-                        <img src="./images/tuning.jpg" width="300" class="center borderradius">
+                    <div class="flex-item1">
+                        <img src="./images/tuning.jpg" style="width: 70%;" class="center borderradius">
                         <h2 class="center">Tuning</h2>
                     </div>
-                    <div style="width: 33.33%; float: left;">
-                        <img src="./images/supra.jpg" width="300" class="center borderradius">
+                    <div class="flex-item1">
+                        <img src="./images/supra.jpg" style="width: 70%;" class="center borderradius">
                         <h2 class="center">Cars</h2>
                     </div>
                 </div>
@@ -98,8 +98,8 @@
         </article>
         <footer>
             <div class="colorramp"></div>
-            <div class="footercontent">
-                <div>
+            <div class="flex-container">
+                <div class="footerflex">
                     <h3>Contact me</h3>
                     <ul>
                         <li><a href="joel_erni1@sluz.ch">send E-Mail</a></li>
@@ -107,7 +107,7 @@
                         <li>Tel.: 079 123 45 67</li>
                     </ul>
                 </div>
-                <div>
+                <div class="footerflex">
                     <h3>Social Media</h3>
                     <ul>
                         <li><a>Youtube</a></li>
@@ -117,7 +117,7 @@
                         <li><a>LinkedIn</a></li>
                     </ul>
                 </div>
-                <div>
+                <div class="footerflex">
                     <h3>About</h3>
                     <ul>
                         <li><a href="aboutme.html">About me</a></li>
