--- a/news.html
+++ b/news.html
@@ -40,8 +40,8 @@
                 <h1>Forza Horizon 5 Series 6 Update</h1>
                 <h2>Horizon Customs</h2>
                 <p>Horizon Customs. The focus for Forza Horizon 5 Series 6 is "Horizon Customs," which celebrates all of the various ways players can contribute to FH5 with their own creations, including car tunes and designs, EventLab Blueprints, and photographers. Some of the changes coming with this Festival Playlist include:</p>
-                <div class="wrap">
-                    <div style="width: 55%; float: left;">
+                <div class="flex-container">
+                    <div class="flex-item3">
                         <ul>
                             <li>New collectible paint barrels and miniature t-rex dinosaurs scattered all over the world</li>
                             <li>Two EventLab Events featured every week</li>
@@ -50,7 +50,7 @@
                             <li>Tons of new cosmetics and cars</li>
                         </ul>
                     </div>
-                    <div style="width: 40%; float:right; padding: 2.5%;">
+                    <div class="flex-item2" style="padding: 2.5%;">
                         <img width="500px" height="300px" src="images/aa064041-7e2b-4b90-9ccb-c037866aa7fc.jpeg" alt="Series 6 Image">
                     </div>
                 </div>
@@ -60,8 +60,8 @@
         </article>
         <footer>
             <div class="colorramp"></div>
-            <div class="footercontent">
-                <div>
+            <div class="flex-container">
+                <div class="footerflex">
                     <h3>Contact me</h3>
                     <ul>
                         <li><a href="joel_erni1@sluz.ch">send E-Mail</a></li>
@@ -69,7 +69,7 @@
                         <li>Tel.: 079 123 45 67</li>
                     </ul>
                 </div>
-                <div>
+                <div class="footerflex">
                     <h3>Social Media</h3>
                     <ul>
                         <li><a>Youtube</a></li>
@@ -79,7 +79,7 @@
                         <li><a>LinkedIn</a></li>
                     </ul>
                 </div>
-                <div>
+                <div class="footerflex">
                     <h3>About</h3>
                     <ul>
                         <li><a href="aboutme.html">About me</a></li>
