--- a/vorlage.html
+++ b/vorlage.html
@@ -47,8 +47,8 @@
         </article>
         <footer>
             <div class="colorramp"></div>
-            <div class="footercontent">
-                <div>
+            <div class="flex-container">
+                <div class="footerflex">
                     <h3>Contact me</h3>
                     <ul>
                         <li><a href="joel_erni1@sluz.ch">send E-Mail</a></li>
@@ -56,7 +56,7 @@
                         <li>Tel.: 079 123 45 67</li>
                     </ul>
                 </div>
-                <div>
+                <div class="footerflex">
                     <h3>Social Media</h3>
                     <ul>
                         <li><a>Youtube</a></li>
@@ -66,7 +66,7 @@
                         <li><a>LinkedIn</a></li>
                     </ul>
                 </div>
-                <div>
+                <div class="footerflex">
                     <h3>About</h3>
                     <ul>
                         <li><a href="aboutme.html">About me</a></li>
