--- a/cars.html
+++ b/cars.html
@@ -6,9 +6,7 @@
         <meta charset="UTF-8">
         <link rel="shortcut icon" type="image/png" href="./images/icon.png">
     </head>
-    <body style="    background-image:
-    linear-gradient(to bottom, rgba(245, 246, 252, 0) 0%, rgb(59, 53, 46) 55vw), url('images/Background1.jpg');
-">
+    <body style="    background-image: linear-gradient(to bottom, rgba(245, 246, 252, 0) 0%, rgb(59, 53, 46) 55vw), url('images/Background1.jpg');">
         <header>
             <div class="colorramp"></div>
                 <div class="header-navigation">
@@ -26,7 +24,7 @@
                                 <a href="cars/prstunts.html">PR Stunts</a>
                                 <a href="cars/streetracing.html">Street Racing</a>
                             </div>
-                        </div>
+                          </div>
                         <a href="map.html">Map</a>
                         <a href="tuning.html">Tuning</a>
                         <a href="tips.html">Tips</a>
@@ -38,27 +36,25 @@
         <article>
             <div>
                 <div class="paragraph-trenner"></div>
-                <h1>Forza Horizon 5 Series 6 Update</h1>
-                <h2>Horizon Customs</h2>
+                <h1 class="center">Race Types</h1>
                 <div class="paragraph-trenner"></div>
-                <p>Horizon Customs. The focus for Forza Horizon 5 Series 6 is "Horizon Customs," which celebrates all of the various ways players can contribute to FH5 with their own creations, including car tunes and designs, EventLab Blueprints, and photographers. Some of the changes coming with this Festival Playlist include:</p>
-                <div class="flex-container">
-                    <div class="flex-item3">
-                        <ul>
-                            <li>New collectible paint barrels and miniature t-rex dinosaurs scattered all over the world</li>
-                            <li>Two EventLab Events featured every week</li>
-                            <li>One Seasonal Championship featuring a custom photo taken by a community member</li>
-                            <li>Seasonal PR Stunts will now provide Super Wheelspins instead of regular Wheelspins</li>
-                            <li>Tons of new cosmetics and cars</li>
-                        </ul>
-                    </div>
-                    <div class="flex-item2" style="padding: 2.5%;">
-                        <img width="500px" height="300px" src="images/aa064041-7e2b-4b90-9ccb-c037866aa7fc.jpeg" alt="Series 6 Image">
+            </div>
+            <div>
+                <p>blablalba</p>
+                <div>
+                    <div class="flex-container">
+                        <div class="flex-item1">
+                            <img src="images/apex.png">
+                        </div>
+                        <div class="flex-item1">
+                            <img src="images/baja.png">
+                        </div>
+                        <div class="flex-item1">
+                            <img src="images/rush.png">
+                        </div>
                     </div>
                 </div>
-                <iframe width="700vw" height="400vw" src="https://www.youtube.com/embed/8frDfEyL8rw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
-            <div class="paragraph-trenner"></div>
         </article>
         <footer>
             <div class="colorramp"></div>
