--- a/vorlage.html
+++ b/vorlage.html
@@ -5,10 +5,8 @@
         <link rel="stylesheet" href="styles.css">
         <meta charset="UTF-8">
         <link rel="shortcut icon" type="image/png" href="./images/icon.png">
-    </head style="    background-image:
-    linear-gradient(to bottom, rgba(245, 246, 252, 0) 0%, rgb(59, 53, 46) 55vw), url('images/Background1.jpg');
-">
-    <body>
+    </head>
+    <body style="    background-image: linear-gradient(to bottom, rgba(245, 246, 252, 0) 0%, rgb(59, 53, 46) 55vw), url('images/Background1.jpg');">
         <header>
             <div class="colorramp"></div>
                 <div class="header-navigation">
@@ -18,13 +16,13 @@
                         </a>
                         <a href="news.html">News</a>
                         <div class="dropdown">
-                            <a class="dropbtn">Cars</a>
+                            <a class="dropbtn" href="cars.html">Cars</a>
                             <div class="dropdown-content">
-                                <a href="#">Road Racing</a>
-                                <a href="#">Dirt Racing</a>
-                                <a href="#">Cross Rounty Racing</a>
-                                <a href="#">PR Stunts</a>
-                                <a href="#">Street Racing</a>
+                                <a href="cars/roadracing.html">Road Racing</a>
+                                <a href="cars/dirtracing.html">Dirt Racing</a>
+                                <a href="cars/crosscountryracing.html">Cross Country Racing</a>
+                                <a href="cars/prstunts.html">PR Stunts</a>
+                                <a href="cars/streetracing.html">Street Racing</a>
                             </div>
                           </div>
                         <a href="map.html">Map</a>
@@ -36,18 +34,18 @@
             <div class="colorramp"></div>
         </header>
         <article>
-            <P>Paragraph</P>
+            <p>Paragraph</p>
             <a>Link</a>
             <h1>H1 Text</h1>
             <h2>H2 Text</h2>
             <h3>H3 Text</h3>
             <h4>H4 Text</h4>
             <h5>H5 Text</h5>
-            <h5>H6 Text</h6>
+            <h6>H6 Text</h6>
         </article>
         <footer>
             <div class="colorramp"></div>
-            <div class="flex-container">
+            <div class="flex-container footerconent">
                 <div class="footerflex">
                     <h3>Contact me</h3>
                     <ul>
@@ -59,18 +57,18 @@
                 <div class="footerflex">
                     <h3>Social Media</h3>
                     <ul>
-                        <li><a>Youtube</a></li>
-                        <li><a>Instagram</a></li>
-                        <li><a>Discord</a></li>
-                        <li><a>Reddit</a></li>
-                        <li><a>LinkedIn</a></li>
+                        <li><a href="https://www.youtube.com/c/RickastleyCoUkOfficial">Youtube</a></li>
+                        <li><a href="https://www.instagram.com/jeppylino/">Instagram</a></li>
+                        <li><a href="https://discord.gg/4ctjPXzg">Discord</a></li>
+                        <li><a href="https://www.reddit.com/user/Jeppy_">Reddit</a></li>
+                        <li><a href="https://www.linkedin.com/in/joel-erni-745116239/">LinkedIn</a></li>
                     </ul>
                 </div>
                 <div class="footerflex">
                     <h3>About</h3>
                     <ul>
                         <li><a href="aboutme.html">About me</a></li>
-                        <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">AGB</a></li>
+                        <li><a href="https://c.tenor.com/_4YgA77ExHEAAAAC/rick-roll.gif" target="_blank">AGB</a></li>
                         <li><a href="https://c.tenor.com/rUa8MTSuXFEAAAAd/who-cares.gif" target="_blank">Disclaimer</a></li>
                     </ul>
                 </div>
