--- a/cars.html
+++ b/cars.html
@@ -40,20 +40,31 @@
                 <div class="paragraph-trenner"></div>
             </div>
             <div>
-                <p>blablalba</p>
+                <p>There are five types of race in Forza Horizon 5: <span style="font-family: AmsiBold;">road racing, street racing, PR stunts, dirt racing and cross country racing</span>. Each type of race is suited to a certain kind of car, so having a range of vehicles in your collection will help you rack up the victories.</p>
                 <div>
                     <div class="flex-container">
-                        <div class="flex-item1">
-                            <img src="images/apex.png">
+                        <div class="flex-item1 center racetypes">
+                            <a href="cars/roadracing.html"><img src="images/apex.png" class="image"></a>
                         </div>
-                        <div class="flex-item1">
-                            <img src="images/baja.png">
+                        <div class="flex-item1 center racetypes">
+                            <a href="cars/crosscountryracing.html"><img src="images/baja.png" class="image"></a>
                         </div>
-                        <div class="flex-item1">
-                            <img src="images/rush.png">
+                        <div class="flex-item1 center racetypes">
+                            <a href="cars/prstunts.html"><img src="images/rush.png" class="image"></a>
                         </div>
                     </div>
+                    <div class="flex-container">
+                        <div class="flex-item1"></div>
+                        <div class="flex-item2 center racetypes">
+                            <a href="cars/dirtracing.html"><img src="images/wilds.png" class="image"></a>
+                        </div>
+                        <div class="flex-item2 center racetypes">
+                            <a href="cars/streetracing.html"><img src="images/streetscene.png" class="image"></a>
+                        </div>
+                        <div class="flex-item1"></div>
+                    </div>
                 </div>
+                <div class="paragraph-trenner"></div>
             </div>
         </article>
         <footer>
@@ -88,4 +99,19 @@
             </div>
         </footer>
     </body>
+    <style>
+        .racetypes{
+            height: 200px;
+        }
+        .image{
+            height: 150px;
+            width: 15vw;
+            float: inherit;
+            border-radius: 10px;
+        }
+        .image:hover{
+            height: 155px;
+            width: 15.5vw;
+        }
+    </style>
 </html>
