--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
                 </div>
             <div class="colorramp"></div>
         </header>
-        <article class="wrap">
-
+        <article>
             <div class="wrap flex-container">
                 <div class="flex-item2">
                     <div>
