--- a/cars.html
+++ b/cars.html
@@ -6,7 +6,7 @@
         <meta charset="UTF-8">
         <link rel="shortcut icon" type="image/png" href="./images/icon.png">
     </head>
-    <body style="    background-image: linear-gradient(to bottom, rgba(245, 246, 252, 0) 0%, rgb(59, 53, 46) 55vw), url('images/Background1.jpg');">
+    <body>
         <header>
             <div class="colorramp"></div>
                 <div class="header-navigation">
@@ -99,19 +99,5 @@
             </div>
         </footer>
     </body>
-    <style>
-        .racetypes{
-            height: 200px;
-        }
-        .image{
-            height: 150px;
-            width: 15vw;
-            float: inherit;
-            border-radius: 10px;
-        }
-        .image:hover{
-            height: 155px;
-            width: 15.5vw;
-        }
-    </style>
+    <script src="script.js"></script>
 </html>
