--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
         <meta charset="UTF-8">
         <link rel="shortcut icon" type="image/png" href="./images/icon.png">
     </head>
-    <body style="    background-image:
-    linear-gradient(to bottom, rgba(245, 246, 252, 0) 0%, rgb(59, 53, 46) 55vw), url('images/Background1.jpg');
-">
+    <body>
         <header>
             <div class="colorramp"></div>
                 <div class="header-navigation">
@@ -127,4 +125,5 @@
             </div>
         </footer>
     </body>
+    <script src="script.js"></script>
 </html>
