--- a/cars.html
+++ b/cars.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Vorlage: Forza Horizon 5</title>
+        <title>Cars</title>
         <link rel="stylesheet" href="styles.css">
         <meta charset="UTF-8">
         <link rel="shortcut icon" type="image/png" href="./images/icon.png">
@@ -11,7 +11,7 @@
             <div class="colorramp"></div>
                 <div class="header-navigation">
                     <nav>
-                        <a href="index.html" class="LogoClick" target="_blank">
+                        <a href="index.html" class="LogoClick">
                             <img src="./images/Logo2.png" class="Logo" alt="Start">
                         </a>
                         <a href="news.html">News</a>
