--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Vorlage: Forza Horizon 5</title>
+        <title>Forza Horizon 5 Guide</title>
         <link rel="stylesheet" href="styles.css">
         <meta charset="UTF-8">
         <link rel="shortcut icon" type="image/png" href="./images/icon.png">
@@ -11,7 +11,7 @@
             <div class="colorramp"></div>
                 <div class="header-navigation">
                     <nav>
-                        <a href="index.html" class="LogoClick" target="_blank">
+                        <a href="index.html" class="LogoClick">
                             <img src="./images/Logo2.png" class="Logo" alt="Start">
                         </a>
                         <a href="news.html">News</a>
@@ -54,6 +54,9 @@
                 <iframe src="https://store.steampowered.com/widget/1551360/547831/" frameborder="0" width="800" height="190"></iframe>
             </div>
             <div class="paragraph-trenner"></div>
+            <div class="content center">
+                <h3>Lead breathtaking expeditions across the vibrant and ever-evolving open world landscapes of Mexico with limitless, fun driving action in hundreds of the world’s greatest cars.</h3>
+            </div>
             <div>
                 <div class="flex-container">
                     <div class="flex-item1">
@@ -70,12 +73,6 @@
                     <div class="flex-item1">
                         <h2 class="awards-list">NME Award for <br><span style="font-family: AmsiBoldItalic;">Best Audio in Game</span><br>2022</h2>
                     </div>
-                </div>
-            </div>
-            <div class="paragraph-trenner"></div>
-            <div>
-                <div class="content center">
-                    <h3>Lead breathtaking expeditions across the vibrant and ever-evolving open world landscapes of Mexico with limitless, fun driving action in hundreds of the world’s greatest cars.</h3>
                 </div>
             </div>
         </article>
