--- a/news.html
+++ b/news.html
@@ -1,34 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Vorlage: Forza Horizon 5</title>
-        <link rel="stylesheet" href="styles.css">
+        <title>News</title>
+        <link rel="stylesheet" href="/styles.css">
         <meta charset="UTF-8">
-        <link rel="shortcut icon" type="image/png" href="./images/icon.png">
+        <link rel="shortcut icon" type="image/png" href="/images/icon.png">
     </head>
     <body>
         <header>
             <div class="colorramp"></div>
                 <div class="header-navigation">
                     <nav>
-                        <a href="index.html" class="LogoClick" target="_blank">
-                            <img src="./images/Logo2.png" class="Logo" alt="Start">
+                        <a href="/index.html" class="LogoClick">
+                            <img src="/images/Logo2.png" class="Logo" alt="Start">
                         </a>
-                        <a href="news.html">News</a>
+                        <a href="/news.html">News</a>
                         <div class="dropdown">
-                            <a class="dropbtn" href="cars.html">Cars</a>
+                            <a class="dropbtn" href="/cars.html">Cars</a>
                             <div class="dropdown-content">
-                                <a href="cars/roadracing.html">Road Racing</a>
-                                <a href="cars/dirtracing.html">Dirt Racing</a>
-                                <a href="cars/crosscountryracing.html">Cross Country Racing</a>
-                                <a href="cars/prstunts.html">PR Stunts</a>
-                                <a href="cars/streetracing.html">Street Racing</a>
+                                <a href="/cars/roadracing.html">Road Racing</a>
+                                <a href="/cars/dirtracing.html">Dirt Racing</a>
+                                <a href="/cars/crosscountryracing.html">Cross Country Racing</a>
+                                <a href="/cars/prstunts.html">PR Stunts</a>
+                                <a href="/cars/streetracing.html">Street Racing</a>
                             </div>
                         </div>
-                        <a href="map.html">Map</a>
-                        <a href="tuning.html">Tuning</a>
-                        <a href="tips.html">Tips</a>
-                        <a href="aboutme.html">About-Me</a>
+                        <a href="/map.html">Map</a>
+                        <a href="/tuning.html">Tuning</a>
+                        <a href="/tips.html">Tips</a>
+                        <a href="/aboutme.html">About-Me</a>
                     </nav>
                 </div>
             <div class="colorramp"></div>
@@ -90,5 +90,5 @@
             </div>
         </footer>
     </body>
-    <script src="script.js"></script>
+    <script src="/script.js"></script>
 </html>
