--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         Adventure today and add to your Wishlist!</p>
                 </div>
                 <div class="flex-item1">
-                    <img style="width: 90%; text-align: center; max-height: 500px; max-width: 500px; border-radius: 5px;" src="./images/cover.jpg" alt="Game Cover">
+                    <img style="height: 100%;; text-align: center; max-height: 500px; max-width: 500px; border-radius: 5px;" src="./images/cover.jpg" alt="Game Cover">
                 </div>
             </div>
             <div>
