--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </header>
         <article>
             <div class="wrap flex-container">
-                <div class="flex-item2">
+                <div class="flex-item3">
                     <div>
                         <h1>Forza Horizon 5</h1>
                     </div>
@@ -46,8 +46,8 @@
                         world’s greatest cars. Begin Your Horizon
                         Adventure today and add to your Wishlist!</p>
                 </div>
-                <div class="flex-item1">
-                    <img style="height: 100%;; text-align: center; max-height: 500px; max-width: 500px; border-radius: 5px;" src="./images/cover.jpg" alt="Game Cover">
+                <div class="flex-item2" style="overflow: hidden;">
+                    <img class="center" style="height: 100%;; text-align: center; max-height: 500px; max-width: 500px; border-radius: 5px;" src="./images/cover.jpg" alt="Game Cover">
                 </div>
             </div>
             <div>
